--- a/style.css
+++ b/style.css
@@ -5,27 +5,59 @@ body{
 
 
 @keyframes hide {
-    to   { visibility: hidden; }
+    0% {
+        width: 100%;
+      }
+      100% {
+        width: 0%;
+        visibility: hidden;
+    }
 }
 
 @keyframes show{
+    0% {
+        width: 0;
+      }
+      100% {
+        width: 100%;
+        padding-left: 20px;
+    }
+}
+
+@keyframes hideReserva {
+    to { visibility: hidden; }
+}
+
+@keyframes showReserva{
     to { visibility: visible;}
 }
 
 
 
 .navBar{
-    height: auto;
+    height: 100px;
     width: auto;
     background-color: black;
     position: relative;
     min-width: 360px;
+    min-height: 120px;
+}
+
+.logo-icon{
+    position: relative;
+    display: block;
+
+    z-index: 1;
+
+    max-height: 200px;
+    max-width: 220px;
+
 }
 
 .frontLink{
     display: inline-block;
     padding-bottom: 30px;
-    padding-left: 35px;
+    padding-left: 70px;
     padding-top: 30px;
     font-size: 30px;
     color: white;
@@ -36,9 +68,9 @@ body{
 .buttons{
     font-size: 23px;
     color: white;
-    padding-right: 80px;
     float: right;
-    padding-top: 35px;
+    margin-top: 40px;
+    margin-right: 150px;
 }
 
 
@@ -50,46 +82,45 @@ body{
 
 
 .hamburger1{
-    width:25px;
-    height:3px;
-    background:rgb(175, 89, 19);
+    width:32px;
+    height:2px;
+    background:white;
     display:block;
-    position:absolute;
+    position: relative;
     transform:translate3d(0,-8px,0);
 }
 
 .hamburger2{
-    width:25px;
-    height:3px;
-    background:rgb(175, 89, 19);
+    width:32px;
+    height:2px;
+    background:white;
     display:block;
-    position:absolute;
+    position: relative;
     transform:translate3d(0,0,0);
 }
 
 .hamburger3{
-    width:25px;
-    height:3px;
-    background:rgb(175, 89, 19);
+    width:32px;
+    height:2px;
+    background:white;
     display:block;
-    position:absolute;
+    position: relative;
     transform:translate3d(0,8px,0);
 }
 
 .hitbox{
-    border: 1px solid rgb(175, 89, 19);
-    width: 43px;
-    height: 33px;
-    background:rgba(175, 89, 19, 0.493);
-    border-radius: 20%;
+    border: 1px solid grey;
+    width: 50px;
+    height: 38px;
+    border-radius: 15%;
     display: block;
-    position: absolute;
-    transform: translate3d(-10px,-16px,0);
+    position: relative;
+    transform: translate3d(-11px,-23px,0);
     cursor: pointer;
 }
 
 .hitbox:hover{
-    background:rgba(175, 89, 19, 0.685);
+    background: rgba(165, 165, 165, 0.253);
 }
 
 .div-hitbox{
@@ -97,38 +128,80 @@ body{
     position: relative;
     float: right;
     margin-right: 65px;
-    margin-top: 47px;
+    margin-top: 60px;
 }
 
 .menu-toggle:checked ~ .buttons{
     padding-top: 0px;
+    margin-right: 0px;
     box-sizing: border-box;
-    width: 100%;
-    position: relative;
-    height: 300px;
+    display: block;
+    width: 200px;
+    height: 650px;
+
+    position: absolute;
     visibility: visible;
     animation: show;
-    transition: height 0.4s ease;
+    transition: width 1s ease;
 }
 
 .menu-toggle:checked ~ .buttons > a{
     margin-bottom: 30px;
     position: relative;
-    padding-left: 20px;
+    visibility: visible;
 }
 
-.menu-toggle:checked ~ .buttons > .linkComprar{
+.menu-toggle:checked ~ .buttons > .linkProdutos{
     padding-top: 20px;
 }
 
 .menu-toggle:checked ~ .div-hitbox .menu-toggle-button .hitbox{
-    background:rgba(175, 89, 19, 0.685);
+    background:rgba(165, 165, 165, 0.253);
     box-shadow: 0px 0px 10px 2px gray;
 }
 
+.link{
+    margin-right: 70px;
+    text-decoration: none;
+    color: white;
+    font-family: Poppins,sans-serif;
+    font-size: 17px;
+    overflow: hidden;
+    transition: color 0.25s;
+    letter-spacing: 3px;
+}
+
+.link:hover{
+    color: rgb(112, 112, 112);
+    cursor: pointer;
+}
 
 
+.buttonFront{
+    color: white;
+    font-size: 23px;
+    height: 40px;
+    width: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    text-align: center;
+    padding-top: 12px;
+    background: linear-gradient(180deg, rgb(126, 0, 4) 0%, rgb(119, 26, 3) 50%, rgba(144,0,74,1) 89%, rgb(173, 39, 6) 100%);
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+    display: block;
+    box-shadow: 2px 2px 3px 1px rgb(0, 0, 0);
+}
 
+.buttonFront:hover {
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.24),0 0px 10px 0 rgb(0, 0, 0);
+}
+
+.buttonFront:active{
+    box-shadow: -2px -2px 3px 1px rgb(0, 0, 0);
+}
 
 
 .frontPic{
@@ -136,7 +209,7 @@ body{
     width: auto;
     min-width: 360px;
     max-width: 100%;
-    background-image: url("/src/ursoLR-9.jpg");
+    background-image: url("/src/lowRes/ursoLR-9.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -190,8 +263,8 @@ body{
     color: white;
     font-size: 22px;
     text-align: center;
-    padding-top: 18px;
-    padding-bottom: 18px;
+    padding-top: 35px;
+    padding-bottom: 35px;
     position: relative;
 }
 
@@ -236,18 +309,18 @@ body{
   
   
 .slideshow li:nth-child(1) span { 
-    background-image: url("/src/hidromeis.jpg");
+    background-image: url("/src/lowRes/hidromeis.jpg");
 }
 .slideshow li:nth-child(2) span { 
-    background-image: url("/src/ursoLR-8.jpg");
+    background-image: url("/src/lowRes/ursoLR-8.jpg");
     animation-delay: 3s; 
 }
 .slideshow li:nth-child(3) span { 
-    background-image: url("/src/ursoLR-2.jpg");
+    background-image: url("/src/lowRes/ursoLR-2.jpg");
     animation-delay: 6s; 
 }
 .slideshow li:nth-child(4) span { 
-    background-image: url("/src/fotocesto.jpg");
+    background-image: url("/src/lowRes/fotocesto.jpg");
     animation-delay: 9s; 
 }
   
@@ -270,7 +343,7 @@ body{
     width: 100%;
     height: 100%;
     position: absolute;
-    animation: show 2.5s;
+    animation: showReserva 2.5s;
 }
 
 
@@ -288,7 +361,7 @@ body{
     width: 100%;
     height: 100%;
     position: absolute;
-    animation: show 2.5s;
+    animation: showReserva 2.5s;
 }
 
 .validacaoEscondida{
@@ -348,7 +421,7 @@ body{
     min-width: 360px;
     max-width: 100%;
 
-    background-image: url("/src/hidromel-xadrez-2.jpg");
+    background-image: url("/src/lowRes/hidromel-xadrez-2.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -374,8 +447,7 @@ body{
 .border{
     margin-left: auto;
     margin-right: auto;
-    max-width: fit-content;
-    width: auto;
+    max-width: 400px;
     padding: 50px 50px 50px 50px;
     background-color: rgba(0, 0, 0, 0.651);
     border: 2px solid rgb(175, 89, 19);
@@ -383,16 +455,18 @@ body{
 
 .backgroundPagesContent .border .forms .form-group input{
     color: white;
-    font-size: 30px;
+    font-size: 27px;
     font-family: Poppins,sans-serif;
     background-color: rgba(0, 0, 0, 0);
     border: 0px;
     border-bottom: 2px solid rgb(175, 89, 19);
     width:100%;
+    -moz-appearance:textfield; /* firefox */
 }
 
 .formInput::placeholder {
     color: lightgray;
+    opacity: 1; /* firefox */
 }
 
 #produto{
@@ -434,7 +508,13 @@ body{
     -webkit-appearance: none;
 }
 
+.produtoHref{
+    color: lightgray;
+}
 
+.produtoHref:hover{
+    color: rgb(141, 141, 141);
+}
 
 
 
@@ -555,6 +635,92 @@ body{
 
 
 
+.bordaProduto{
+    display: inline-block;
+    position: relative;
+    vertical-align: top;
+    width: 360px;
+    height: auto;
+    
+    margin-left: auto;
+    margin-right: auto;
+
+    padding: 50px 50px 50px 50px;
+    background-color: rgba(0, 0, 0, 0.651);
+    border: 2px solid rgb(175, 89, 19);
+    
+}
+
+.fotoProduto{
+    margin-left: auto;
+    margin-right: auto;
+    width: 360px;
+    height: 600px;
+}
+
+.produtoLegenda{
+    color:white;
+    width: auto;
+    display: block;
+    font-size: 160%;
+    
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+.textoProduto{
+    display: block;
+    position: relative;
+    color: white; 
+    font-size: 17px;
+    text-align: justify;
+    padding: 20px 10px 10px 10px;
+}
+
+.buttonProduto{
+    color: white;
+    font-size: 20px;
+    height: 40px;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    text-align: center;
+    padding-top: 12px;
+    background: linear-gradient(180deg, rgb(126, 0, 4) 0%, rgb(119, 26, 3) 50%, rgba(144,0,74,1) 89%, rgb(173, 39, 6) 100%);
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+    display: block;
+    box-shadow: 2px 2px 3px 1px rgb(0, 0, 0);
+}
+
+.buttonProduto:hover {
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.24),0 0px 10px 0 rgb(0, 0, 0);
+}
+
+.buttonProduto:active{
+    box-shadow: -2px -2px 3px 1px rgb(0, 0, 0);
+}
+
+.textoContato{
+    color: white; 
+    font-size: 24px;
+    margin-left: auto; 
+    margin-right: auto;
+    max-width: 300px;
+    overflow-wrap: break-word;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 40px; 
+    padding-bottom: 80px; 
+    text-align: center;
+    padding: 20px 30px 20px 30px;
+
+    background-color: rgba(0, 0, 0, 0.651);
+    border: 2px solid rgb(175, 89, 19);
+}
 
 
 
@@ -629,7 +795,7 @@ body{
 
 
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 425px){
     
     .frontLink{
         font-size: 25px;
@@ -637,14 +803,21 @@ body{
     }
 
     .div-hitbox{
-        margin-top: 43px;
         margin-right: 50px;
     }
 
-    .menu-toggle:checked ~ .buttons{
-        height: 320px;
-    }
+}
 
+
+@media screen and (max-width: 490px){
+    .bordaProduto{
+        padding: 0 0 40px 0;
+        width: 355px;
+    }
+    .fotoProduto{
+        height: 580px;
+        width: 355px;
+    }
 }
 
 
@@ -659,30 +832,53 @@ body{
     .logoAbraco{
         margin-left: 50px;
     }
+    .buttonFront{
+        margin-left: 50px;
+    }
 }
 
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 1440px) {
+
+    .link{
+        margin-right: 0px;
+        text-decoration: none;
+        color: white;
+        font-family: Poppins,sans-serif;
+        font-size: 17px;
+        transition: color 0.25s;
+        letter-spacing: 3px;
+        white-space: nowrap;
+    }
     
     .buttons > a{
         display: block;
         margin-bottom: 30px;
-        padding-left: 20px;
         position: relative;
-    }
+        overflow: hidden;
+        padding-left: 20px;
 
-    .linkComprar{
-        padding-top: 20px;
+        visibility: hidden;
+        transition: visibility 1s ease;
+        animation: hide;
     }
 
     .buttons {
-        height: 0px;
-        padding-right: 0px;
-        background: rgba(255, 255, 255, 0.103);
-        transition: height 0.4s ease;
-        animation: hide 0s 0.7s forwards;
-        float: none;
-        padding-top: 0px;
+        width: 0px;
+        height: 650px;
+        position: absolute;
+        background: rgb(0, 0, 0);
+        transition: width 1s ease;
+        animation: hide;
+        overflow: hidden;
+
+        padding-top: 20px;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-left: calc(100% - 200px);
+        right: 0;
+        top: 120px;
+        z-index: 1;
     }
 
     .div-hitbox{display: block;}
